# dbt-view-importer

./: LICENSE  README.md  README_JA.md  pyproject.toml
.cursor/rules/: project-design.mdc  project-rules.mdc
docs/ai/: _memory.md  _plan.md  _refactoring.md  _tests.md
docs/human/: 20250307.md  20250311.md  20250311_2.md
scripts/: debug_import.sh  run_tests.sh
src/bq2dbt/: __init__.py  __main__.py  cli.py
src/bq2dbt/commands/: import_cmd.py  import_views.py  importer.py  logs_cmd.py
src/bq2dbt/converter/: bigquery.py  dependency.py  generator.py  importer.py  lineage.py
src/bq2dbt/templates/: model.sql  model.yml
src/bq2dbt/utils/: logger.py  naming.py
template_sample/: template.sql  template.yml
tests/: conftest.py
tests/commands/: test_import_cmd.py  test_importer.py
tests/converter/: test_bigquery.py  test_dependency.py  test_generator.py  test_importer.py
